--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "styled-components": "5.3.5"
   },
   "devDependencies": {
+    "@devstronomy/dev-dependencies": "0.1.0",
     "@testing-library/jest-dom": "5.16.3",
     "@testing-library/react": "12.1.4",
     "@testing-library/user-event": "13.5.0",
-    "@types/jest": "27.4.1",
     "@types/lodash": "4.14.180",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
@@ -57,13 +57,10 @@
     "@types/styled-components": "5.1.24",
     "@types/webpack": "5.28.0",
     "@types/webpack-dev-server": "4.7.1",
-    "@typescript-eslint/eslint-plugin": "5.16.0",
-    "@typescript-eslint/parser": "5.16.0",
     "babel-eslint": "10.1.0",
     "babel-plugin-styled-components": "2.0.6",
     "copy-webpack-plugin": "10.2.4",
     "css-loader": "6.7.1",
-    "eslint": "8.11.0",
     "eslint-config-standard": "16.0.3",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-jest-dom": "4.0.1",
@@ -74,22 +71,10 @@
     "eslint-plugin-standard": "4.1.0",
     "gh-pages": "3.2.3",
     "html-webpack-plugin": "5.5.0",
-    "import-sort-style-module": "6.0.0",
-    "jest": "27.5.1",
     "json5-loader": "4.0.1",
     "mini-css-extract-plugin": "2.6.0",
-    "prettier": "2.6.1",
-    "prettier-package-json": "2.6.3",
-    "prettier-plugin-import-sort": "0.0.7",
     "rimraf": "3.0.2",
-    "style-loader": "3.3.1",
-    "ts-jest": "27.1.4",
-    "ts-loader": "9.2.8",
-    "typescript": "4.6.3",
-    "webpack": "5.70.0",
-    "webpack-cli": "4.9.2",
-    "webpack-dev-server": "4.7.4",
-    "webpack-merge": "5.8.0"
+    "style-loader": "3.3.1"
   },
   "keywords": [
     "apollo",
