--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "url": "https://github.com/devstronomy/frontend/issues"
   },
   "scripts": {
-    "build": "webpack --config webpack.prod.js --progress",
     "clean": "rimraf dist",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "flush-npm": "rm -rf node_modules && npm install",
+    "clean:dist": "run-s clean dist",
+    "dist": "webpack --config webpack.prod.js --progress",
+    "predeploy": "npm run dist",
+    "deploy": "gh-pages -d dist",
+    "flush-npm": "rm -rf node_modules && npm install --force",
     "lint": "eslint src/**/*.ts src/**/*.tsx",
     "lint:fix": "eslint --fix src/**/*.ts src/**/*.tsx",
     "start": "webpack serve --config webpack.dev.js",
@@ -26,14 +27,15 @@
     "prettier:fix": "prettier -w src && prettier-package-json --write ./package.json"
   },
   "dependencies": {
-    "@material-ui/core": "4.12.3",
-    "@material-ui/icons": "4.11.2",
+    "@devstronomy/celestial": "0.2.0",
+    "@material-ui/core": "4.12.4",
+    "@material-ui/icons": "4.11.3",
     "lodash": "4.17.21",
-    "polished": "4.1.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-redux": "7.2.6",
-    "react-router-dom": "6.2.2",
+    "polished": "4.2.2",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-redux": "7.2.8",
+    "react-router-dom": "6.3.0",
     "react-router-hash-link": "2.4.3",
     "react-virtualized": "9.22.3",
     "redux": "4.1.2",
@@ -42,32 +44,32 @@
   },
   "devDependencies": {
     "@devstronomy/dev-dependencies": "0.1.0",
-    "@testing-library/jest-dom": "5.16.3",
-    "@testing-library/react": "12.1.4",
-    "@testing-library/user-event": "13.5.0",
-    "@types/lodash": "4.14.180",
-    "@types/node": "17.0.23",
-    "@types/react": "17.0.43",
-    "@types/react-dom": "17.0.14",
-    "@types/react-redux": "7.1.23",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.0.1",
+    "@testing-library/user-event": "14.1.0",
+    "@types/lodash": "4.14.181",
+    "@types/node": "17.0.24",
+    "@types/react": "18.0.5",
+    "@types/react-dom": "18.0.1",
+    "@types/react-redux": "7.1.24",
     "@types/react-router": "5.1.18",
     "@types/react-router-dom": "5.3.3",
     "@types/react-router-hash-link": "2.4.5",
-    "@types/react-virtualized": "9.21.20",
-    "@types/styled-components": "5.1.24",
+    "@types/react-virtualized": "9.21.21",
+    "@types/styled-components": "5.1.25",
     "@types/webpack": "5.28.0",
     "@types/webpack-dev-server": "4.7.1",
     "babel-eslint": "10.1.0",
-    "babel-plugin-styled-components": "2.0.6",
+    "babel-plugin-styled-components": "2.0.7",
     "copy-webpack-plugin": "10.2.4",
     "css-loader": "6.7.1",
     "eslint-config-standard": "16.0.3",
-    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jest-dom": "4.0.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-react": "7.29.4",
-    "eslint-plugin-react-hooks": "4.3.0",
+    "eslint-plugin-react-hooks": "4.4.0",
     "eslint-plugin-standard": "4.1.0",
     "gh-pages": "3.2.3",
     "html-webpack-plugin": "5.5.0",
