--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@devstronomy/frontend",
-  "version": "0.2.1",
+  "version": "0.3.2-alpha.1",
   "description": "This project contains the code-base for the frontend part of Devstronomy project.",
   "license": "MIT",
   "homepage": "https://devstronomy.com",
@@ -27,7 +27,7 @@
     "prettier:fix": "prettier -w src && prettier-package-json --write ./package.json"
   },
   "dependencies": {
-    "@devstronomy/celestial": "0.3.0",
+    "@devstronomy/celestial": "0.3.2-alpha.1",
     "@material-ui/core": "4.12.4",
     "@material-ui/icons": "4.11.3",
     "lodash": "4.17.21",
