--- a/package.json
+++ b/package.json
@@ -32,49 +32,50 @@
     "@material-ui/icons": "4.11.3",
     "lodash": "4.17.21",
     "polished": "4.2.2",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-redux": "7.2.8",
-    "react-router-dom": "6.3.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-redux": "8.0.4",
+    "react-router-dom": "6.4.2",
     "react-router-hash-link": "2.4.3",
     "react-virtualized": "9.22.3",
-    "redux": "4.1.2",
-    "redux-saga": "1.1.3",
-    "styled-components": "5.3.5"
+    "redux": "4.2.0",
+    "redux-saga": "1.2.1",
+    "styled-components": "5.3.6"
   },
   "devDependencies": {
-    "@devstronomy/dev-dependencies": "0.2.0",
-    "@testing-library/jest-dom": "5.16.4",
-    "@testing-library/react": "13.1.1",
-    "@testing-library/user-event": "14.1.1",
-    "@types/lodash": "4.14.181",
-    "@types/node": "17.0.24",
-    "@types/react": "18.0.5",
-    "@types/react-dom": "18.0.1",
+    "@devstronomy/dev-dependencies": "0.3.0",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "14.4.3",
+    "@types/lodash": "4.14.186",
+    "@types/node": "18.11.7",
+    "@types/react": "18.0.24",
+    "@types/react-dom": "18.0.8",
     "@types/react-redux": "7.1.24",
-    "@types/react-router": "5.1.18",
+    "@types/react-router": "5.1.19",
     "@types/react-router-dom": "5.3.3",
     "@types/react-router-hash-link": "2.4.5",
     "@types/react-virtualized": "9.21.21",
-    "@types/styled-components": "5.1.25",
+    "@types/styled-components": "5.1.26",
     "@types/webpack": "5.28.0",
     "@types/webpack-dev-server": "4.7.1",
     "babel-eslint": "10.1.0",
     "babel-plugin-styled-components": "2.0.7",
-    "copy-webpack-plugin": "10.2.4",
+    "copy-webpack-plugin": "11.0.0",
     "css-loader": "6.7.1",
-    "eslint-config-standard": "16.0.3",
+    "eslint-config-standard": "17.0.0",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest-dom": "4.0.1",
+    "eslint-plugin-jest-dom": "4.0.2",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-promise": "6.0.0",
-    "eslint-plugin-react": "7.29.4",
-    "eslint-plugin-react-hooks": "4.4.0",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-react": "7.31.10",
+    "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-standard": "4.1.0",
-    "gh-pages": "3.2.3",
+    "gh-pages": "4.0.0",
     "html-webpack-plugin": "5.5.0",
+    "jest-environment-jsdom": "29.2.2",
     "json5-loader": "4.0.1",
-    "mini-css-extract-plugin": "2.6.0",
+    "mini-css-extract-plugin": "2.6.1",
     "rimraf": "3.0.2",
     "style-loader": "3.3.1"
   },
@@ -87,8 +88,8 @@
     "solar-system"
   ],
   "engines": {
-    "node": "16.14.2",
-    "npm": "8.5.0"
+    "node": "18.2.0",
+    "npm": "8.9.0"
   },
   "browserslist": [
     "defaults"
